// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vehicules > with empty list > should match snapshot 1`] = `
<div
  data-testid="vehicules"
>
  <p
    data-testid="vehicules-title"
  >
    Vehicules
  </p>
  <p
    data-testid="vehicules-empty"
  >
    No 
    vehicules
     linked
  </p>
</div>
`;

exports[`Vehicules > with filled list > should match snapshot 1`] = `
<div
  data-testid="vehicules"
>
  <p
    data-testid="vehicules-title"
  >
    Vehicules
  </p>
  <ul>
    <li
      data-testid="vehicules-0"
    >
      VALUE_1
    </li>
    <li
      data-testid="vehicules-1"
    >
      VALUE_2
    </li>
  </ul>
</div>
`;
